<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/md_grey_900"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButtonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageButton
                android:id="@+id/imageButtonSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_search_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageButtonMore"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/imageButtonMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_more_vert_24"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:src="@drawable/curved_logo"

        />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demoAppName"
            android:textColor="@color/textColor"
            android:textSize="@dimen/headerTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demoAppDeveloperName"
            android:textColor="@color/secondaryColor"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/h3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demoAppAdsStatus"
            android:textColor="@color/md_grey_600"
            android:textSize="@dimen/h4"
            android:layout_marginTop="5dp"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_star_24"
                    android:drawablePadding="5dp"
                    android:text="5.0 "
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="14 reviews"
                    android:textColor="@color/md_grey_600" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:background="@color/md_grey_600" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_cloud_download_24"
                    android:drawablePadding="5dp"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5.0 MB"
                    android:textColor="@color/md_grey_600" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:background="@color/md_grey_600" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_graphic_eq_24"
                    android:drawablePadding="5dp"
                    android:text="5.0 "
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rated for 3+"
                    android:textColor="@color/md_grey_600" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:background="@color/md_grey_600" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:text="100+"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Downloads"
                    android:textColor="@color/md_grey_600" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/appInstallButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/secondaryColor"
        android:text="@string/installText"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"



        />



    <LinearLayout
        android:id="@+id/appImagePreviewLayout"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:weightSum="5"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/appInstallButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/dimen_16dp"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/display1"
            android:layout_margin="4dp"
            />
          <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/display2"
            android:layout_margin="4dp"
            />
          <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/display3"
            android:layout_margin="4dp"
            />
          <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/display4"
            android:layout_margin="4dp"
            />
          <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/display5"
            android:layout_margin="4dp"
            />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/aboutAppLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/appImagePreviewLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutThisApp"
            android:textColor="@color/textColor"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
            android:layout_margin="@dimen/appAppSectionSpaceDimen"
            />

         <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutDemoAppDescription"
            android:textColor="@color/md_grey_600"
             android:textSize="@dimen/h3"
            android:layout_margin="@dimen/appAppSectionSpaceDimen"
            />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/appCategoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:strokeWidth="1dp"
            app:cornerRadius="20dp"
            app:strokeColor="@color/md_grey_600"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/appCategory"
            android:textAllCaps="false"
            android:textColor="@color/md_grey_600"

            />



    </LinearLayout>




    <LinearLayout
        android:id="@+id/rateAppLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/aboutAppLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rateThisApp"
            android:textColor="@color/textColor"
            android:layout_margin="@dimen/appAppSectionSpaceDimen"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reteTellOthers"
            android:textColor="@color/md_grey_600"
            android:textSize="@dimen/h3"
            android:layout_marginStart="5dp"
            />


        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:layout_gravity="fill_vertical"
            android:layout_marginTop="@dimen/dimen_16dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reteTellOthers"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/h3"
            android:layout_marginStart="5dp"
            />
    </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>